# thalia

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  env-configmap.yaml  thalia-deployment.yaml  thalia-service.yaml
.github/workflows/: docker-image.yml
src/: error_manager.rs  log_manager.rs  main.rs
src/utils/: shutdown.rs
