[package]
name = "thalia"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
