[package]
name = "thalia"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amq-protocol-types = "7.0.1"
deadpool-lapin = "0.10.0"
dotenv = "0.15.0"
futures = { version = "0.3.15", features = ["thread-pool"] }
lapin = "2.0.3"
num_cpus = "1.13.1"
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
whoami = "1.1.2"